# AI--LLM-Smart-Switcher

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml
docs/: installation.md
src/: main.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: gpu.rs  lib.rs  main.rs  utils.rs
src-tauri/src/commands/: benchmark.rs  integrations.rs  mod.rs  models.rs  snapshots.rs  switcher.rs  system.rs  telemetry.rs
src/app/: App.tsx  state.tsx
src/components/layout/: FirstRunBanner.tsx  Sidebar.tsx  TopBar.tsx
src/components/ui/: Button.tsx  Card.tsx  Icon.tsx  MetricTile.tsx  ProgressBar.tsx  SectionHeader.tsx  StatusPill.tsx  WarningBanner.tsx
src/constants/: navigation.ts  variations.ts
src/data/: mockData.ts
src/features/benchmark/: BenchmarkScreen.tsx
src/features/dashboard/: DashboardScreen.tsx
src/features/hardware/: HardwareScreen.tsx
src/features/models/: ModelsScreen.tsx
src/features/settings/: SettingsScreen.tsx
src/features/snapshots/: SnapshotsScreen.tsx
src/features/switcher/: SwitcherScreen.tsx
src/lib/: fit.ts  format.ts
src/services/: benchmark.ts  diagnostics.ts  hardware.ts  models.ts  snapshots.ts  switcher.ts  tauri.ts
src/styles/: global.css
src/types/: domain.ts
