[package]
name = "llm-smart-switcher"
version = "0.1.0"
description = "Cross-platform desktop shell for managing local and hosted LLM routing"
authors = ["davytan"]
edition = "2021"

[lib]
name = "llm_smart_switcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
sysinfo = "0.38.4"
tauri = { version = "2", features = [] }
